# tpx3awkward

./: .gitignore  README.rst  batched_load.ipynb  data_analyse_new.ipynb  example.ipynb  example.py  my_utils.py  notes_old_code.py  pyproject.toml  requirements.txt
tpx3awkward/: __init__.py  _utils.py
