[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[project]
name = "tpx3awkward"
version = "0.0.0"
description = "TPX3 data processing utilities"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "scikit-image",
  "numba",
  "matplotlib",
  "seaborn",
  "pillow",
  "pyarrow",
  "fastparquet",
  "dask",
  "tqdm",
  "ipython",
  "jupyterlab",
  "statsmodels",
]
